recent blog thumbnail no longer distorted

--- a/src/app/blog/recent/recent.component.css
+++ b/src/app/blog/recent/recent.component.css
@@ -9,5 +9,4 @@
 
 img {
     width: 80px;
-    height: 80px;
 }
